Table configuraciones{
    id int [pk, increment]/// Primary key
    nombre varchar 
    descripcion varchar
    direccion varchar
    telefono varchar
    correo_electronico varchar
    web varchar
    logo varchar
}

Table gestiones{
    id int [pk, increment] // Primary key
    nombre varchar
}


Table periodo[
    id int [pk, increment]// Primary key
    nombre varchar
    gestion_id int [ref:> gestiones.id]
    
]


Table grados{
    id int [pk, increment]// Primary key
    nombre varchar
    nivel_id int [ref: > niveles.id]



}
Table niveles{
    id int [pk, increment] //Primary key
    nombre varchar
} 

Table turnos{
    id int [pk, increment]//Primary key
    nombre varchar
}

Table materias{
    id int[pk, increment]// Primary key
    nombre varchar
}

Table users{
    id int [pk, increment]// Primary key
    name varchar
    email varchar
    password varchar
}

Table personals{
    id int [pk, increment]// Primary key
    usuario_id int [ref:> user.id]
    tipo varchar
    nombre varchar
    ap_paterno varchar
    ap_materno varchar
    ci varchar
    fecha_nacimiento date
    direccion varchar
    telefono varchar
    profesion varchar
    foto varchar    
}

Table Formaciones {
    id int [pk, increment] // Primary key
    personal_id int [ref: > personals.id]
    titulo varchar
    institucion varchar
    nivel varchar
    fecha_graduacion date
    archivo varchar
}

Table ppffs {
    id int [pk, increment] // Primary key
    nombres varchar
    apellidos varchar
    ci varchar
    fecha_nacimiento date
    telefono varchar
    parentesco varchar
    ocupacion varchar
    direccion varchar
}

Table estudiantes {
    id int [pk, increment] // Primary key
    usuario_id int [ref:> user.id]
    ppff_id int [ref:> ppffs.id]
    nombres varchar
    apellidos varchar
    ci varchar
    fecha_nacimiento date
    direccion varchar
    telefono varchar
    foto varchar
    genero varchar
    estado_estudiante varchar

}


Table matriculaciones{
    id int [pk, increment]
    estudiante_id int [ref:> estudiantes.id]
    turno_id int [ref:> turnos.id]
    gestion_id int [ref:> gestion_id]
    nivel_id int [ref:> niveles.id]
    grado_id int [ref:> grado.id]
    paralelo_id int [ref:> paralelo.id]

}